Fix popup  position on mobile

--- a/styles.css
+++ b/styles.css
@@ -417,7 +417,7 @@ textarea {
   background-color: rgb(229 229 229 / 90%);
   z-index: 10;
   position: fixed;
-  padding: 10px;
+  padding: 32px 10px;
   height: 100vh;
   display: flex;
   justify-content: center;
